# rdp-client

./: .release-it.ts  components.d.ts  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: main.yml
scripts/: publish-qiniu.ts  publish.ts  release.ts
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  linux.json  windows.json
src-tauri/src/: lib.rs  main.rs
src/layout/: layout.vue
src/models/: constants.ts  pve.model.ts  setting.model.ts
src/pve/: ProxmoxEngine.ts  QmMonitor.ts  constructor.ts  index.ts  model.ts  proxy.ts
src/router/: index.ts
src/utils/: freerdp.ts  updater.ts
src/utils/rdp/: FreeRdpClient.ts  IRdpClient.ts  MstscClient.ts  RdpClientFactory.ts  WindowsUtil.ts
src/views/home/: home.vue
src/views/login/: login.vue
src/views/setting/: setting.vue
