[package]
name = "HINEW"
version = "1.0.19"
description = "A Windows Rdp Client App"
authors = ["JJ"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hi_new_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
time = { version = "0.3", features = ["formatting", "local-offset"] }
tauri-utils = "2"
tauri-plugin-shell =  { git = "https://github.com/janeywong/plugins-workspace", branch = "v2" }
tauri-plugin-dialog = { git = "https://github.com/janeywong/plugins-workspace", branch = "v2" }
tauri-plugin-store =  { git = "https://github.com/janeywong/plugins-workspace", branch = "v2" }
tauri-plugin-log =  { git = "https://github.com/janeywong/plugins-workspace", branch = "v2" }
tauri-plugin-os = { git = "https://github.com/janeywong/plugins-workspace", branch = "v2" }
tauri-plugin-http = { git = "https://github.com/janeywong/plugins-workspace", branch = "v2", features = ["unsafe-headers", "cookies"] }
tauri-plugin-fs = { git = "https://github.com/janeywong/plugins-workspace", branch = "v2" }

[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = { git = "https://github.com/janeywong/plugins-workspace", branch = "v2" }

tauri-plugin-process = { git = "https://github.com/janeywong/plugins-workspace", branch = "v2" }
